--- a/css files/classes.css
+++ b/css files/classes.css
@@ -104,13 +104,13 @@ p {
 }
 
 #section1 {
-  background-image: url("https://www.yudiz.com/codepen/studio-r/bg-living.jpg");
+  background-image: url("https://images.unsplash.com/photo-1499744349893-0c6de53516e6?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 #section2 {
-  background-image: url("https://www.yudiz.com/codepen/studio-r/bg-kitchen.jpg");
+  background-image: url("https://images.unsplash.com/photo-1685022515813-c42e8348639b?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 #section3 {
-  background-image: url("https://www.yudiz.com/codepen/studio-r/bg-badroom.jpg");
+  background-image: url("https://images.unsplash.com/photo-1631396326838-de37e5f8bcbc?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 #section4 {
   background-image: url("https://www.yudiz.com/codepen/studio-r/bg-office.jpg");
@@ -154,10 +154,10 @@ p {
   left: 0;
 }
 #section2 .image {
-  background-image: url("https://www.yudiz.com/codepen/studio-r/bg-kitchen.jpg");
+  background-image: url("https://lh6.googleusercontent.com/Ey2muRz7Dzw4_A_SZGlm9KcCx77mjBRHdqKhNtOQVMIDXH3ErnTBjbv3m4Pw-aNWZHtqZ56pc8vawNregq37XSpyXAIje9adtfItNOuMkfxaYXvM=w1280 ");
 }
 #section3 .image {
-  background-image: url("https://www.yudiz.com/codepen/studio-r/bg-badroom.jpg");
+  background-image: url("https://lh4.googleusercontent.com/fgBgGKdXRbgwijG1ROTe-kfDOyBFz_H54mM9DVJEMe1RdYJELxAQx5KQV1AX587A7jv7Nz6aYMoPP2PofdVVSOJsA2nZdWPzGGCf8u4j4cqV2jG5=w1280");
 }
 #section4 .image {
   background-image: url("https://www.yudiz.com/codepen/studio-r/bg-office.jpg");
