--- a/css files/classes.css
+++ b/css files/classes.css
@@ -154,7 +154,7 @@ p {
   left: 0;
 }
 #section2 .image {
-  background-image: url("introwood.jpg");
+  background-image: url("https://images.unsplash.com/photo-1729867906822-25247c64519b?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 #section3 .image {
   background-image: url("advwood.jpg");
