Update classes.css, testing different file ref method

--- a/css files/classes.css
+++ b/css files/classes.css
@@ -157,7 +157,7 @@ p {
   background-image: url("https://images.unsplash.com/photo-1729867906822-25247c64519b?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 #section3 .image {
-  background-image: url("advwood.jpg");
+  background-image: url("/WoodShop-Website/advwood.jpg");
 }
 #section4 .image {
   background-image: url("https://www.yudiz.com/codepen/studio-r/bg-office.jpg");
